Fix layout issue with youtube embeds

--- a/src/stylesheets/app.sass
+++ b/src/stylesheets/app.sass
@@ -179,6 +179,7 @@ body.project
 
 		h1, h2, h3, h4, h5, h6, p, .youtube
 			+grid-column(1 of 1)
+			float: none
 
 		h1, h2, h3, h4, h5, h6
 			+lato
